--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "mongodb": "^4.5.0"
-  },
-  "devDependencies": {
-    "dotenv": "^16.0.0"
   }
 }
