--- a/app/listings/package.json
+++ b/app/listings/package.json
@@ -62,7 +62,7 @@
     }
   },
   "lint-staged": {
-    "{src,cypress}/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+    "{src,cypress}/**/*.{js,jsx,ts,tsx,json,scss,md}": [
       "prettier --single-quote --write",
       "eslint --fix"
     ]
